--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<html lang="ms">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AZA Zurich Takaful</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background: #e6f0fa;
+      font-family: 'Poppins', sans-serif;
+      color: #003366;
+    }
+    .card {
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+    .spinner {
+      border: 5px solid #cce0f7;
+      border-top: 5px solid #0070c9;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      margin: auto;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
+</head>
+<body class="d-flex flex-column align-items-center p-4">
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+  <h1 class="mb-3">☕ Selamat Datang ke AZA Zurich Takaful</h1>
+  <p class="text-center mb-4">Informasi takaful & waktu solat semasa 🕌</p>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <div class="card p-4" style="max-width: 500px; width: 100%;">
+    <h3 class="text-center mb-3">🕌 Waktu Solat Semasa</h3>
+    <div id="output" class="text-center">Sedang ambil lokasi… ⏳</div>
+  </div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <script>
+    const zonMapping = [
+      { name: "Kuala Lumpur", code: "WLY01" },
+      { name: "Putrajaya", code: "WLY02" },
+      { name: "Selangor", code: "SGR01" },
+      { name: "Johor", code: "JHR01" },
+      { name: "Kedah", code: "KDH01" },
+      { name: "Kelantan", code: "KTN01" },
+      { name: "Melaka", code: "MLK01" },
+      { name: "Negeri Sembilan", code: "NGS01" },
+      { name: "Pahang", code: "PHG01" },
+      { name: "Pulau Pinang", code: "PNG01" },
+      { name: "Perak", code: "PRK01" },
+      { name: "Perlis", code: "PLS01" },
+      { name: "Sabah", code: "SBH01" },
+      { name: "Sarawak", code: "SWK01" },
+      { name: "Terengganu", code: "TRG01" }
+    ];
+
+    const output = document.getElementById('output');
+
+    function showManualSelect() {
+      output.innerHTML = `
+        <p>📍 Pilih negeri anda:</p>
+        <select id="negeriSelect" class="form-select mb-3">
+          <option value="" disabled selected>-- Pilih Negeri --</option>
+          ${zonMapping.map(z => `<option value="${z.code}">${z.name}</option>`).join('')}
+        </select>
+        <div id="manualResult"></div>
+      `;
+      document.getElementById('negeriSelect').addEventListener('change', (e) => {
+        fetchWaktu(e.target.value);
+      });
+    }
+
+    async function detectZon(lat, lon) {
+      try {
+        const res = await fetch(`https://api.bigdatacloud.net/data/reverse-geocode-client?latitude=${lat}&longitude=${lon}&localityLanguage=en`);
+        const data = await res.json();
+        const negeri = data.principalSubdivision;
+        const zon = zonMapping.find(z => negeri.includes(z.name))?.code || "WLY01";
+        fetchWaktu(zon);
+      } catch (err) {
+        showManualSelect();
+      }
+    }
+
+    async function fetchWaktu(zone) {
+      output.innerHTML = `<div class="spinner"></div><p class="mt-2">Sedang ambil waktu solat…</p>`;
+      try {
+        const res = await fetch(`https://api.waktusolat.app/v2/solat/${zone}`);
+        const data = await res.json();
+        const waktu = data.prayerTime;
+        output.innerHTML = `
+          <p>🗺️ Zon aktif: <b>${zone}</b></p>
+          <ul class="list-unstyled mt-3">
+            <li>🌅 Subuh: ${waktu.Subuh}</li>
+            <li>☀️ Zohor: ${waktu.Zohor}</li>
+            <li>🌇 Asar: ${waktu.Asar}</li>
+            <li>🌆 Maghrib: ${waktu.Maghrib}</li>
+            <li>🌃 Isyak: ${waktu.Isyak}</li>
+          </ul>
+        `;
+      } catch {
+        output.innerHTML = `<p class="text-danger">❌ Gagal dapat waktu solat</p>`;
+        showManualSelect();
+      }
+    }
+
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(
+        pos => detectZon(pos.coords.latitude, pos.coords.longitude),
+        () => showManualSelect()
+      );
+    } else {
+      showManualSelect();
+    }
+  </script>
+</body>
 </html>
