--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <div id="controls" class="controls hidden">
         <label for="zoneSelect" class="label">📍 Pilih negeri</label>
-        <select id="zoneSelect" class="select">
+        <select id="negeri" class="select">
           <option value="">-- Pilih Negeri --</option>
         </select>
       </div>
