--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <form id="quoteForm">
       <input type="text" id="q_name" name="name" placeholder="Nama penuh" required />
-      <input type="tel" id="q_phone" name="phone" placeholder="No. Telefon (contoh: 6012...)" required />
+      <input type="tel" id="q_phone" name="phone" placeholder="No. Telefon (60192506999)" required />
       <input type="email" id="q_email" name="email" placeholder="Emel (pilihan)" />
       <textarea id="q_message" name="message" placeholder="Maklumat ringkas / pertanyaan"></textarea>
 
