--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
   </div>
 
-  <footer>© <span id="year"></span> BroChat x Zurich</footer>
+  <footer>© <span id="year"></span> BroChat AzA Takaful Zurich</footer>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
