--- a/index.html
+++ b/index.html
@@ -149,7 +149,14 @@
         <textarea id="mesej" placeholder="Mesej tambahan (optional)" rows="3"></textarea>
         <button type="submit">Hantar Permohonan</button>
       </form>
+    </div><div class="quiz-section">
+    <h2>🎯 Kuiz Zurich Takaful</h2>
+    <div id="quizBox">
+      <p id="quizQuestion">Sedia untuk mula?</p>
+      <div id="quizOptions"></div>
+      <button id="startQuiz" class="produk-btn">Mula Kuiz</button>
     </div>
+  </div>
   </div>
 
   <footer>© <span id="year"></span> BroChat AzA Takaful Zurich</footer>
