--- a/index.html
+++ b/index.html
@@ -134,7 +134,21 @@
     <button class="produk-btn" data-produk="zpa">Personal Accident</button>
     <button class="produk-btn" data-produk="ztravel">Z-Travel</button>
     <button class="produk-btn" data-produk="zfirebiz">Fire Takaful (Business)</button>
+  </div> 
+  <!-- =========================
+🎯 SEKSI KUiz ZURICH TAKAFUL
+========================= -->
+<section id="quizSection" class="card">
+  <div class="card-header">
+    <h2>🎯 Kuiz Zurich Takaful</h2>
   </div>
+
+  <div id="quizBox" class="quiz-box">
+    <p id="quizQuestion" class="quiz-question">Uji pengetahuan anda tentang takaful!</p>
+    <div id="quizOptions" class="quiz-options"></div>
+    <button id="startQuiz" class="btn">Mula Kuiz</button>
+  </div>
+</section>
 
   <div id="modal" class="modal">
     <div class="modal-content">
@@ -149,13 +163,6 @@
         <textarea id="mesej" placeholder="Mesej tambahan (optional)" rows="3"></textarea>
         <button type="submit">Hantar Permohonan</button>
       </form>
-    </div><div class="quiz-section">
-    <h2>🎯 Kuiz Zurich Takaful</h2>
-    <div id="quizBox">
-      <p id="quizQuestion">Sedia untuk mula?</p>
-      <div id="quizOptions"></div>
-      <button id="startQuiz" class="produk-btn">Mula Kuiz</button>
-    </div>
   </div>
   </div>
 
