--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <button class="produk-btn" data-produk="zfirebiz">Fire Takaful (Business)</button>
   </div> 
   <!-- =========================
-🎯 SEKSI KUiz ZURICH TAKAFUL
+🎯 SEKSYEN KUiz ZURICH TAKAFUL
 ========================= -->
 <section id="quizSection" class="card">
   <div class="card-header">
